feat: Get Alarm and Door status
